--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "456971db",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "63951657",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def merge_forcage_piezo(forcage_file, merge_file ='SuezDataset/static_attributes/piezo_characs.csv',output_file = 'merged_output.csv'):\n",
-    "    df_forcage =  pd.read_csv('/home/aguerouani/suez/SuezDataset/time_series/forçages/' + forcage_file + '.txt', \n",
+    "def merge_forcage_piezo(forcage_file, merge_file ='dataset/static_attributes/piezo_characs.csv',output_file = 'merged_output.csv'):\n",
+    "    df_forcage =  pd.read_csv('dataset/time_series/forçages/' + forcage_file + '.txt', \n",
     "                  sep=';', \n",
     "                  skiprows=85,\n",
     "                  comment='#')\n",
@@ -28,7 +28,7 @@
     "    \n",
     "    bss_id = df_piezo_charachs[df_piezo_charachs['limnit'] == forcage_file ]['BSS_ID'].values[0]\n",
     "    \n",
-    "    df_piezo =  pd.read_csv(\"SuezDataset/time_series/piezos/\"+bss_id+\".csv\")\n",
+    "    df_piezo =  pd.read_csv(\"dataset/time_series/piezos/\"+bss_id+\".csv\")\n",
     "    \n",
     "    df_piezo.head()\n",
     "\n",
@@ -46,7 +46,7 @@
     "\n",
     "    df_merged.to_csv(output_file, index=False)\n",
     "    \n",
-    "merge_forcage_piezo('X142000101','SuezDataset/static_attributes/piezo_characs.csv','merged_X142000101_v2.csv')\n",
+    "merge_forcage_piezo('X142000101','dataset/static_attributes/piezo_characs.csv','merged_X142000101_v2.csv')\n",
     "    \n",
     "   "
    ]
@@ -54,13 +54,28 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
