--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "456971db",
    "metadata": {},
    "outputs": [],
@@ -16,9 +16,371 @@
    "execution_count": 5,
    "id": "63951657",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Qls</th>\n",
+       "      <th>Qmmj</th>\n",
+       "      <th>Val_MD</th>\n",
+       "      <th>Val_S</th>\n",
+       "      <th>Val_Q</th>\n",
+       "      <th>Val_M</th>\n",
+       "      <th>Val_C</th>\n",
+       "      <th>Val_I</th>\n",
+       "      <th>Ptot</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Vent</th>\n",
+       "      <th>Humi</th>\n",
+       "      <th>DLI</th>\n",
+       "      <th>SSI</th>\n",
+       "      <th>IHGR</th>\n",
+       "      <th>SWI</th>\n",
+       "      <th>SWE</th>\n",
+       "      <th>TN</th>\n",
+       "      <th>TX</th>\n",
+       "      <th>niveau_nappe_eau</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20020503</td>\n",
+       "      <td>15300</td>\n",
+       "      <td>3.517</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>2734.7</td>\n",
+       "      <td>1334.9</td>\n",
+       "      <td>0.698</td>\n",
+       "      <td>0.780</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>11.7</td>\n",
+       "      <td>350.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20020504</td>\n",
+       "      <td>8350</td>\n",
+       "      <td>1.919</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>2480.2</td>\n",
+       "      <td>1646.7</td>\n",
+       "      <td>0.693</td>\n",
+       "      <td>0.787</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>350.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20020505</td>\n",
+       "      <td>6690</td>\n",
+       "      <td>1.538</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>2292.9</td>\n",
+       "      <td>1934.2</td>\n",
+       "      <td>0.684</td>\n",
+       "      <td>0.778</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>350.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20020506</td>\n",
+       "      <td>5630</td>\n",
+       "      <td>1.294</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2302.1</td>\n",
+       "      <td>2284.9</td>\n",
+       "      <td>0.678</td>\n",
+       "      <td>0.768</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>10.2</td>\n",
+       "      <td>350.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20020507</td>\n",
+       "      <td>4980</td>\n",
+       "      <td>1.145</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>2447.9</td>\n",
+       "      <td>1306.2</td>\n",
+       "      <td>0.668</td>\n",
+       "      <td>0.758</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>350.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6998</th>\n",
+       "      <td>20220727</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99.000</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>3086.4</td>\n",
+       "      <td>2949.0</td>\n",
+       "      <td>0.133</td>\n",
+       "      <td>0.163</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>26.5</td>\n",
+       "      <td>348.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6999</th>\n",
+       "      <td>20220728</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99.000</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>3054.2</td>\n",
+       "      <td>2866.9</td>\n",
+       "      <td>0.128</td>\n",
+       "      <td>0.160</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>348.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7000</th>\n",
+       "      <td>20220729</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99.000</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>3029.2</td>\n",
+       "      <td>2308.1</td>\n",
+       "      <td>0.127</td>\n",
+       "      <td>0.159</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>14.9</td>\n",
+       "      <td>22.6</td>\n",
+       "      <td>348.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7001</th>\n",
+       "      <td>20220730</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99.000</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>3124.4</td>\n",
+       "      <td>2733.7</td>\n",
+       "      <td>0.123</td>\n",
+       "      <td>0.156</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>14.1</td>\n",
+       "      <td>25.5</td>\n",
+       "      <td>348.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7002</th>\n",
+       "      <td>20220731</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99.000</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>3134.8</td>\n",
+       "      <td>2860.6</td>\n",
+       "      <td>0.120</td>\n",
+       "      <td>0.152</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>28.3</td>\n",
+       "      <td>348.96</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7003 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date    Qls    Qmmj  Val_MD  Val_S  Val_Q  Val_M  Val_C  Val_I  \\\n",
+       "0     20020503  15300   3.517     -99     16     20     10      0      1   \n",
+       "1     20020504   8350   1.919     -99     16     20     10      0      1   \n",
+       "2     20020505   6690   1.538     -99     16     20     10      0      1   \n",
+       "3     20020506   5630   1.294     -99     16     20     10      0      1   \n",
+       "4     20020507   4980   1.145     -99     16     20     10      0      1   \n",
+       "...        ...    ...     ...     ...    ...    ...    ...    ...    ...   \n",
+       "6998  20220727    -99 -99.000     -99    -99    -99    -99    -99    -99   \n",
+       "6999  20220728    -99 -99.000     -99    -99    -99    -99    -99    -99   \n",
+       "7000  20220729    -99 -99.000     -99    -99    -99    -99    -99    -99   \n",
+       "7001  20220730    -99 -99.000     -99    -99    -99    -99    -99    -99   \n",
+       "7002  20220731    -99 -99.000     -99    -99    -99    -99    -99    -99   \n",
+       "\n",
+       "      Ptot  ...  Vent  Humi     DLI     SSI   IHGR    SWI   SWE    TN    TX  \\\n",
+       "0      7.6  ...   1.3   6.4  2734.7  1334.9  0.698  0.780  0.04   6.3  11.7   \n",
+       "1      0.0  ...   3.3   4.4  2480.2  1646.7  0.693  0.787  0.05   2.1   8.4   \n",
+       "2      0.0  ...   2.5   3.9  2292.9  1934.2  0.684  0.778  0.00  -0.4   9.1   \n",
+       "3      0.0  ...   2.5   4.5  2302.1  2284.9  0.678  0.768  0.00   2.7  10.2   \n",
+       "4      0.1  ...   3.2   4.1  2447.9  1306.2  0.668  0.758  0.00   5.2  16.1   \n",
+       "...    ...  ...   ...   ...     ...     ...    ...    ...   ...   ...   ...   \n",
+       "6998   0.0  ...   1.7   9.8  3086.4  2949.0  0.133  0.163  0.00  14.6  26.5   \n",
+       "6999   0.0  ...   1.4   9.2  3054.2  2866.9  0.128  0.160  0.00  15.2  26.4   \n",
+       "7000   0.8  ...   1.3   9.9  3029.2  2308.1  0.127  0.159  0.00  14.9  22.6   \n",
+       "7001   0.0  ...   1.8   8.3  3124.4  2733.7  0.123  0.156  0.00  14.1  25.5   \n",
+       "7002   0.0  ...   1.7   7.5  3134.8  2860.6  0.120  0.152  0.00  14.6  28.3   \n",
+       "\n",
+       "      niveau_nappe_eau  \n",
+       "0               350.14  \n",
+       "1               350.14  \n",
+       "2               350.09  \n",
+       "3               350.06  \n",
+       "4               350.05  \n",
+       "...                ...  \n",
+       "6998            348.95  \n",
+       "6999            348.94  \n",
+       "7000            348.94  \n",
+       "7001            348.95  \n",
+       "7002            348.96  \n",
+       "\n",
+       "[7003 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def merge_forcage_piezo(forcage_file, merge_file ='dataset/static_attributes/piezo_characs.csv',output_file = 'merged_output.csv'):\n",
+    "def merge_forcage_piezo(forcage_file, merge_file ='dataset/static_attributes/piezo_characs.csv', output_file = None):\n",
     "    df_forcage =  pd.read_csv('dataset/time_series/forçages/' + forcage_file + '.txt', \n",
     "                  sep=';', \n",
     "                  skiprows=85,\n",
@@ -44,12 +406,21 @@
     "    #join df_forcage et df_piezo sur la colonne 'date'\n",
     "    df_merged = pd.merge(df_forcage, df_piezo, on='Date', how='inner')\n",
     "\n",
-    "    df_merged.to_csv(output_file, index=False)\n",
+    "    if(output_file != None):\n",
+    "        df_merged.to_csv(output_file, index=False)\n",
+    "        \n",
+    "    return df_merged\n",
     "    \n",
-    "merge_forcage_piezo('X142000101','dataset/static_attributes/piezo_characs.csv','merged_X142000101_v2.csv')\n",
-    "    \n",
-    "   "
+    "merge_forcage_piezo('X142000101')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf372332-8d19-4129-9a33-a137b57766f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
