--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "456971db",
    "metadata": {},
    "outputs": [],
@@ -13,22 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "63951657",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def merge_forcage_piezo(forcage_file, merge_file ='SuezDataset/static_attributes/piezo_characs.csv',output_file = 'merged_output.csv'):\n",
-    "    df_forcage =  pd.read_csv('/home/aguerouani/suez/SuezDataset/time_series/forçages/' + forcage_file + '.txt', \n",
+    "data_folder = './dataset/'\n",
+    "def merge_forcage_piezo(forcage_file, merge_file ='static_attributes/piezo_characs.csv', output_file = None):\n",
+    "    df_forcage =  pd.read_csv(data_folder + 'time_series/forçages/' + forcage_file + '.txt', \n",
     "                  sep=';', \n",
     "                  skiprows=85,\n",
     "                  comment='#')\n",
     "    df_forcage.columns = df_forcage.columns.str.strip()\n",
-    "    df_piezo_charachs =  pd.read_csv(merge_file,sep=';',encoding='latin-1')\n",
+    "    df_piezo_charachs =  pd.read_csv(data_folder + merge_file,sep=';',encoding='latin-1')\n",
     "    \n",
     "    bss_id = df_piezo_charachs[df_piezo_charachs['limnit'] == forcage_file ]['BSS_ID'].values[0]\n",
     "    \n",
-    "    df_piezo =  pd.read_csv(\"SuezDataset/time_series/piezos/\"+bss_id+\".csv\")\n",
+    "    df_piezo =  pd.read_csv(data_folder + \"time_series/piezos/\"+bss_id+\".csv\")\n",
     "    \n",
     "    df_piezo.head()\n",
     "\n",
@@ -39,14 +40,14 @@
     "    )\n",
     "\n",
     "    df_piezo['Date'] = df_piezo['date_mesure'].astype('int64')\n",
-    "    #garder que les colonnes 'date_mesure' et 'niveau_nappe_eau'\n",
+    "    # garder que les colonnes 'date_mesure' et 'niveau_nappe_eau'\n",
     "    df_piezo = df_piezo[['Date', 'niveau_nappe_eau']]\n",
-    "    #join df_forcage et df_piezo sur la colonne 'date'\n",
+    "    # join df_forcage et df_piezo sur la colonne 'date'\n",
     "    df_merged = pd.merge(df_forcage, df_piezo, on='Date', how='inner')\n",
     "\n",
-    "    df_merged.to_csv(output_file, index=False)\n",
+    "    df_merged.to_csv(data_folder + '/preprocessed/' + (output_file or forcage_file) + '.csv', index=False)\n",
     "    \n",
-    "merge_forcage_piezo('X142000101','SuezDataset/static_attributes/piezo_characs.csv','merged_X142000101_v2.csv')\n",
+    "merge_forcage_piezo('A146020302','static_attributes/piezo_characs.csv')\n",
     "    \n",
     "   "
    ]
@@ -59,7 +60,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   }
  },
