--- a/one_step_transformer.ipynb
+++ b/one_step_transformer.ipynb
@@ -37,20 +37,6 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "Transformer (modifié) - Prédiction JOUR PAR JOUR\n",
-    "Objectif (ce que tu as demandé) :\n",
-    "- Modèle entraîné sur 80% des données (chrono)\n",
-    "- Pour prédire y(t), tu donnes :\n",
-    "    1) y(t-1)  (niveau nappe du jour précédent, réel)\n",
-    "    2) X(t)    (forçages du jour t)\n",
-    "    3) (optionnel) encodage saisonnier doy(t)\n",
-    "- Sortie : y(t) (1 seul jour)\n",
-    "\n",
-    "=> Donc ce n'est PLUS un modèle multi-horizon 7 jours.\n",
-    "=> On passe en \"one-step forecasting\" (horizon=1).\n",
-    "\"\"\"\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -361,7 +347,7 @@
    ],
    "source": [
     "# =========================\n",
-    "# Cellule 2 : Test rolling AUTONOME (réinjection de y_prev = y_hat)\n",
+    "# Test rolling AUTONOME (réinjection de y_prev = y_hat)\n",
     "# =========================\n",
     "\n",
     "# On va prédire toute la zone TEST (à partir de split_raw)\n",
@@ -424,6 +410,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1afb93ae-1fae-4a98-a7a3-6e3e4e267e2b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b9958d1-0049-4708-8257-07c227fe3fb3",
    "metadata": {},
    "outputs": [],
    "source": []
