--- a/reservoirs/ridge.ipynb
+++ b/reservoirs/ridge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "4526010b",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
     "import math \n",
     "import numpy as np\n",
     "from datetime import datetime\n",
-    "dpath = 'datasets/preprocessed/'\n",
+    "dpath = '../datasets/preprocessed/'\n",
     "file_name = 'A146020302.csv'\n",
     "\n",
     "#Makes the time a continuous value to work with ESN.\n",
