--- a/reservoirs/reservoir.ipynb
+++ b/reservoirs/reservoir.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "id": "8b3df8fe",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
     "import math \n",
     "import numpy as np\n",
     "from datetime import datetime\n",
-    "dpath = 'datasets/preprocessed/'\n",
+    "dpath = '../datasets/preprocessed/'\n",
     "file_name = 'A146020302.csv'\n",
     "\n",
     "#Makes the time a continuous value to work with ESN.\n",
@@ -540,7 +540,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "suez",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -554,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
