Organisation des fichiers

--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -23,8 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from DataPreprocessing import *\n",
-    "from StaticModelRegression import *\n",
+    "from src.DataPreprocessing import *\n",
+    "from src.StaticModelRegression import *\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -43,7 +43,7 @@
    "id": "c09a8ddf-07ac-471e-9efe-11d0ba3976e4",
    "metadata": {},
    "source": [
-    "# Well water level prediction with well attributes"
+    "# Reservoir water level prediction with reservoir attributes"
    ]
   },
   {
