remise en forme du dépôt

--- a/reservoirs/hyperopt_multi_input_scaling.ipynb
+++ b/reservoirs/hyperopt_multi_input_scaling.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9270f52a",
    "metadata": {},
    "outputs": [
@@ -175,8 +175,7 @@
     "X_train1, y_train1 = x[:1500], y[:1500]\n",
     "X_test1, y_test1 = x[1500:], y[1500:]\n",
     "X_test1 = np.asarray(X_test1) # chosing the data that will be used (electricity consuption)\n",
-    "X_test1 = X_test1.reshape(X_test1.shape[0], -1) # reshaping data that they could be used by reservoir py\n",
-    "# plot_train_test(X_train1, y_train1, X_test1, y_test1)\n"
+    "X_test1 = X_test1.reshape(X_test1.shape[0], -1) # reshaping data that they could be used by reservoir py\n"
    ]
   },
   {
